<resources>
    <string name="app_name">Learning Android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="udacity_content_provider_contacts">Content Provider: Contacts</string>
    <string name="fragments_activity_button">Fragments Activity</string>
    <string name="title_activity_fragments">FragmentsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_provider">Content Provider</string>
    <string name="activity_label_content_provider">Content Provider</string>
    <string name="label_service_management">Service Management</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_implicit_intent">Implicit Intents</string>
    <string name="service_button_start_async">Start Service A with AsyncTask</string>
    <string name="service_button_start_timer">Start Service A with Timer</string>
    <string name="service_button_stop">Stop Service A</string>
    <string name="intent_service_button_start">Start Intent Service</string>
    <string name="button_show_simple_notification">Show basic notification</string>
    <string name="notification_simple_title">Simple notification</string>
    <string name="notification_simple_text">A demo for a simple notification</string>
    <string name="pref_title_checkbox">Hello</string>
    <string name="pref_key_checkbox">com.mfarag.learn.pref.CHECKBOX</string>
    <string name="pref_key_checkbox1">com.mfarag.learn.pref.CHECKBOX1</string>
    <string name="pref_key_checkbox2">com.mfarag.learn.pref.CHECKBOX2</string>
    <string name="pref_key_checkbox3">com.mfarag.learn.pref.CHECKBOX3</string>
    <string name="pref_summary_checkbox">some summary</string>
    <string name="pref_category_title">Preference Category</string>
    <string name="pref_screen_summary">Preference Screen Summary</string>
    <string name="pref_screen_title">Preference Screen Title</string>
    <string name="pref_editbox_key">pref_key_edit_box</string>
    <string name="pref_editbox_title">EditBox Title</string>
    <string name="pref_editbox_summary">EditBox Summary</string>
    <string name="pref_list_key">pref_key_list</string>
    <string name="pref_list_title">List Preference title</string>
    <string name="pref_list_summary">List Preference Summary</string>
    <string name="pref_list_default">list_item_2</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary">Will give you the right information about me :)</string>
    <string name="pref_about_target_url">http://www.mfarag.com</string>
    <string name="implicit_intent_label_open_in_browser">Open Url in the browser</string>
    <string name="implicit_intent_label_invalid_action">Invalid action, doesn\'t crash</string>
    <string name="implicit_intent_label_open_map">Open Map</string>

    <string-array name="pref_list_entries">
        <item name="pref_list_item_1">First item</item>
        <item name="pref_list_item_2">Second item</item>
        <item name="pref_list_item_3">Third item</item>
    </string-array>
    <string-array name="pref_list_entryValues">
        <item name="pref_list_item_value_1">list_item_1</item>
        <item name="pref_list_item_value_2">list_item_2</item>
        <item name="pref_list_item_value_3">list_item_3</item>
    </string-array>
</resources>
