<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">

    <Button
        android:id="@+id/udacity_content_provider_user_dictionary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/udacity_content_provider_contacts"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/fragments_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragments_activity_button"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/content_providers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_provider"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/service_management"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_service_management"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_notifications"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/implicit_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_implicit_intent"
        android:textAllCaps="false"/>

</LinearLayout>
