<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mfarag.learn.service.ServiceManagementActivity">

    <Button
        android:id="@+id/button_service_start_async"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_button_start_async"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_service_start_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_button_start_timer"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_service_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_button_stop"
        android:textAllCaps="false"/>

</LinearLayout>
