<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mfarag.learn.intent.ImplicitIntentActivity">

    <Button
        android:id="@+id/open_url_in_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent_label_open_in_browser"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/intent_no_valid_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent_label_invalid_action"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/open_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent_label_open_map"
        android:textAllCaps="false"/>

</LinearLayout>
